nginx/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: ingress-nginx
  labels:
    app: nginx
    service: nginx
spec:
  ports:
  - name: nginx
    port: 80
    targetPort: 80
  selector:
    app: nginx
  type: LoadBalancer
